<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="60dp">


    <EditText
        android:id="@+id/et_codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="number"
        android:textSize="24sp"/>


    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="text"
        android:textSize="24sp"/>


    <EditText
        android:id="@+id/et_precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="numberDecimal"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Registrar"
        android:text="@string/registrar"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buscar"
        android:text="@string/buscar"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="modificar"
        android:text="@string/modificar"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="eliminar"
        android:text="@string/eliminar"
        android:textSize="20sp" />

</LinearLayout>